k8s/traefik/jitsi.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi
  namespace: default
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-tls
  rules:
    - host: meet.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-web
                port:
                  number: 8000
